--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ loguru==0.7.2
 PyPDF2==3.0.1
 python-docx==1.1.0
 reportlab==4.0.4
-pydantic==2.5.0pydantic-settings==2.1.0
+pydantic==2.5.0
 PyJWT==2.8.0
 python-dotenv==1.1.1
